--- a/index.html
+++ b/index.html
@@ -19,44 +19,56 @@
                             <a href="index.html"><img src="img/logo.svg" width="149" height="62" alt="Gllacy"></a>
                         </div>
                         <nav class="main-navigation">
-                            <ul>
-                                <li>
+                            <ul class="catalog-list">
+                                <li class="catalog">
                                     <a href="catalog.html">Каталог</a>
-                                    <ul class="sub-menu">
+                                        <ul class="sub-menu">
                                         <li class="new"><a href="#">Новинки</a></li>
-                                        <li><a href="#">Сливочное</a></li>
-                                        <li><a href="#">Щербеты</a></li>
-                                        <li><a href="#">Фруктовый лед</a></li>
-                                        <li><a href="#5">Мелорин</a></li>
+                                        <li class="product-1"><a href="#">Сливочное</a></li>
+                                        <li class="product-2"><a href="#">Щербеты</a></li>
+                                        <li class="product-3"><a href="#">Фруктовый лед</a></li>
+                                        <li class="product-4"><a href="#">Мелорин</a></li>
                                     </ul>
                                 </li>
-                                <li>
+                                <li class="delivery">
                                     <a href="#">Доставка и оплата</a>
                                 </li>
-                                <li>
+                                <li class="company">
                                     <a href="#">О компании</a>
                                 </li>
                             </ul>
                         </nav>
                         <div class="user-blok">
-                            <a class="search" href="#">
-                                <div>
-                                  <form class="search-form">
-                                      <input class="search-user" type="text" name="search" placeholder="Что ищем?">
-                                  </form>
-                                </div>
-                            </a>
-                            <a class="login" href="#">Вход
-                                <div>
-                                    <form class="login-form" method="post">
-                                        <input class="login-user" type="email"  name="email" placeholder="Электронная почта">
-                                        <input class="password-user" type="password"  name="password" placeholder="Пароль">
-                                        <button class="btn-submit" type="submit">Войти</button>
-                                        <a href="#">Забыли пароль?</a>
-                                        <a href="#">Новая регистрация</a>
+                            <div class="search" href="#">
+                                <div class="search-inner">
+                                    <form class="search-form">
+                                        <fieldset class="user-form">
+                                            <input class="search-user" type="text" name="search" placeholder="Что ищем?">
+                                        </fieldset>
                                     </form>
                                 </div>
-                            </a>
+                            </div>
+                            <div class="login" href="#">Вход
+                                <div class="login-inner">
+                                    <form class="login-form" method="post">
+                                        <fieldset class="user-form">
+                                            <input class="email-user" type="email"  name="email" placeholder="Электронная почта">
+                                        </fieldset>
+                                        <fieldset class="user-form">
+                                            <input class="password-user" type="password"  name="password" placeholder="Пароль">
+                                        </fieldset>
+                                        <div>
+                                            <div class="one-half">
+                                                <button class="btn-submit" type="submit">Войти</button>
+                                            </div>
+                                            <div class="one-half">
+                                                <a href="#">Забыли пароль?</a>
+                                                <a href="#">Новая регистрация</a>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
                             <a class="basket" href="#">Пусто</a>
                                 <span class="quantity"><span>
                             </a>
@@ -104,6 +116,25 @@
                     </div>
                     <article class="catalog-product">
                         <div class="product-item">
+                            <div class="product-hover">
+                                <div class="product-inner">
+                                    <div class="hit">
+                                        <img src="img/hit.png" width="61" height="61" alt="Хит">
+                                    </div>
+                                    <div class="preview">
+                                        <img src="img/icecream_orange.jpg" width="267" height="267" alt="Сливочное">
+                                    </div>
+                                    <div class="price-title">
+                                        <span class="price">310 </span><span class="ruble">P/кг</span>
+                                        <p class="product-title">
+                                            <a class="product-title">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+                                        </p>
+                                    </div>
+                                    <div class="btn-preview">
+                                      <a href="#" class="btn">Быстрый просмотр</a>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="hit">
                                 <img src="img/hit.png" width="61" height="61" alt="Хит">
                             </div>
@@ -118,6 +149,25 @@
                             </div>
                         </div>
                         <div class="product-item">
+                            <div class="product-hover">
+                                <div class="product-inner">
+                                    <div class="hit">
+                                        <img src="img/hit.png" width="61" height="61" alt="Хит">
+                                    </div>
+                                    <div class="preview">
+                                        <img src="img/icecream_coffee.jpg" width="267" height="267" alt="Сливочно-кофейное">
+                                    </div>
+                                    <div class="price-title">
+                                        <span class="price">380 </span><span class="ruble">P/кг</span>
+                                        <p class="product-title">
+                                            <a class="product-title">Сливочно-кофейное с кусочками шоколада</a>
+                                        </p>
+                                    </div>
+                                    <div class="btn-preview">
+                                      <a href="#" class="btn">Быстрый просмотр</a>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="hit">
                                 <img src="img/hit.png" width="61" height="61" alt="Хит">
                             </div>
@@ -132,6 +182,25 @@
                             </div>
                         </div>
                         <div class="product-item">
+                            <div class="product-hover">
+                                <div class="product-inner">
+                                    <div class="hit">
+                                        <img src="img/hit.png" width="61" height="61" alt="Хит">
+                                    </div>
+                                    <div class="preview">
+                                        <img src="img/icecream_strawberry.jpg" width="267" height="267" alt="Сливочно-клубничное">
+                                    </div>
+                                    <div class="price-title">
+                                        <span class="price">355 </span><span class="ruble">P/кг</span>
+                                        <p class="product-title">
+                                            <a class="product-title">Сливочно-клубничное с присыпкой из белого шоколада</a>
+                                        </p>
+                                    </div>
+                                    <div class="btn-preview">
+                                      <a href="#" class="btn">Быстрый просмотр</a>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="hit">
                                 <img src="img/hit.png" width="61" height="61" alt="Хит">
                             </div>
@@ -146,6 +215,25 @@
                             </div>
                         </div>
                         <div class="product-item">
+                            <div class="product-hover">
+                                <div class="product-inner">
+                                    <div class="hit">
+                                        <img src="img/hit.png" width="61" height="61" alt="Хит">
+                                    </div>
+                                    <div class="preview">
+                                        <img src="img/icecream_caramel.jpg" width="267" height="267" alt="Сливочное крем-брюле">
+                                    </div>
+                                    <div class="price-title">
+                                        <span class="price">415 </span><span class="ruble">P/кг</span>
+                                        <p class="product-title">
+                                            <a class="product-title">Сливочное крем-брюле с карамельной подливкой</a>
+                                        </p>
+                                    </div>
+                                    <div class="btn-preview">
+                                      <a href="#" class="btn">Быстрый просмотр</a>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="hit">
                                 <img src="img/hit.png" width="61" height="61" alt="Хит">
                             </div>
@@ -241,12 +329,12 @@
             <h3>Мы обязательно вам ответим!</h3>
             <form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
                 <input class="user-name" type="text" name="name" placeholder="Как вас зовут?">
-                <div>
+                <div class"user-comment">
                     <lable class="text">Ваша почта для ответа?</lable>
                     <textarea class="comment" type="text" name="comment" placeholder="Напишите что-нибудь..."></textarea>
                     </label>
                 </div>
-                <button class="submit" type="submit">Отправить</button>
+                <button class="btn-submit btn-modal" type="submit">Отправить</button>
         </div>
         <div class="modal-overlay"></div>
     </body>
