Revert "Скрыла pop_up проверила на валидность поправила"
This reverts commit 5467f41c48de1d4f17263cbf0565a8b647c468d1.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
         <link rel="stylesheet" href="css/style.css">
         <link href='https://fonts.googleapis.com/css?family=Roboto:400,700,900,500&subset=cyrillic,latin' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/fonts.css">
     </head>
     <body>
         <input type="radio" id="btn-1" name="toggle" checked>
@@ -40,7 +39,7 @@
                             </ul>
                         </nav>
                         <div class="user-blok">
-                            <div class="search">
+                            <div class="search" href="#">
                                 <div class="search-inner">
                                     <form class="search-form">
                                         <fieldset class="user-form">
@@ -49,7 +48,7 @@
                                     </form>
                                 </div>
                             </div>
-                            <div class="login">Вход
+                            <div class="login" href="#">Вход
                                 <div class="login-inner">
                                     <form class="login-form" method="post">
                                         <fieldset class="user-form">
@@ -70,8 +69,8 @@
                                     </form>
                                 </div>
                             </div>
-                            <a class="basket" href="#">Пусто
-                                <span class="quantity"></span>
+                            <a class="basket" href="#">Пусто</a>
+                                <span class="quantity"><span>
                             </a>
                         </div>
                         <section class="header-contact">
@@ -112,7 +111,7 @@
                             <p class="banner-text">
                                 При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.
                             </p>
-                            <a href="#" class="btn">Хочу шоколадки!</a>
+                            <a href="#"class="btn">Хочу шоколадки!</a>
                         </div>
                     </div>
                     <article class="catalog-product">
@@ -126,7 +125,7 @@
                                         <img src="img/icecream_orange.jpg" width="267" height="267" alt="Сливочное">
                                     </div>
                                     <div class="price-title">
-                                        <span class="price">310 </span><span class="b-rub">P</span>/кг
+                                        <span class="price">310 </span><span class="ruble">P/кг</span>
                                         <p class="product-title">
                                             <a class="product-title">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
                                         </p>
@@ -143,7 +142,7 @@
                                 <img src="img/icecream_orange.jpg" width="267" height="267" alt="Сливочное">
                             </div>
                             <div class="price-title">
-                                <span class="price">310 </span><span class="b-rub">P</span>/кг
+                                <span class="price">310 </span><span class="ruble">P/кг</span>
                                 <p class="product-title">
                                     <a class="product-title" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
                                 </p>
@@ -279,7 +278,7 @@
                             <div class="right-content">
                                 <p class="newsletter">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой не нужной ерунды. Честно =)
                                 </p>
-                                <form class="newsletter-form" action="https://echo.htmlacademy.ru">
+                                <form class="newsletter-form"action="https://echo.htmlacademy.ru">
                                     <input type="text" name="email" id="total-field" placeholder="Электронная почта">
                                     <button class="btn-submit" type="submit">Отправить</button>
                                 </form>
@@ -330,12 +329,12 @@
             <h3>Мы обязательно вам ответим!</h3>
             <form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
                 <input class="user-name" type="text" name="name" placeholder="Как вас зовут?">
-                <div class="user-comment">
+                <div class"user-comment">
                     <lable class="text">Ваша почта для ответа?</lable>
-                    <textarea class="comment" name="text" placeholder="Напишите что-нибудь..."></textarea>
+                    <textarea class="comment" type="text" name="comment" placeholder="Напишите что-нибудь..."></textarea>
+                    </label>
                 </div>
                 <button class="btn-submit btn-modal" type="submit">Отправить</button>
-            </form>
         </div>
         <div class="modal-overlay"></div>
     </body>
