--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                                         <img src="img/icecream_coffee.jpg" width="267" height="267" alt="Сливочно-кофейное">
                                     </div>
                                     <div class="price-title">
-                                        <span class="price">380 </span><span class="ruble">P/кг</span>
+                                        <span class="price">380 </span><span class="b-rub">P</span>
                                         <p class="product-title">
                                             <a class="product-title">Сливочно-кофейное с кусочками шоколада</a>
                                         </p>
@@ -176,7 +176,7 @@
                                 <img src="img/icecream_coffee.jpg" width="267" height="267" alt="Сливочно-кофейное">
                             </div>
                             <div class="price-title">
-                                <span class="price">380 </span><span class="ruble">P/кг</span>
+                                <span class="price">380 </span><span class="b-rub">P</span>
                                 <p class="product-title">
                                     <a class="product-title" href="#">Сливочно-кофейное с кусочками шоколада</a>
                                 </p>
