--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
     </head>
     <body class="inner-page">
         <header class="main-header">
-            <div class="container clearfix header">
+            <div class="container clearfix">
                 <div class="page-header_upper clearfix">
                     <div class="logo">
                         <a href="index.html"><img src="img/logo.svg" width="149" height="62" alt="Gllacy"></a>
